src/test/ui/rfc-2565-param-attrs/proc-macro-cannot-be-used.stderr
error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:10:21
   |
LL | extern "C" { fn ffi(#[id] arg1: i32, #[id] ...); }
   |                     ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:10:38
   |
LL | extern "C" { fn ffi(#[id] arg1: i32, #[id] ...); }
   |                                      ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:14:38
   |
LL | unsafe extern "C" fn cvar(arg1: i32, #[id] mut args: ...) {}
   |                                      ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:17:28
   |
LL | type Alias = extern "C" fn(#[id] u8, #[id] ...);
   |                            ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:17:38
   |
LL | type Alias = extern "C" fn(#[id] u8, #[id] ...);
   |                                      ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:21:9
   |
LL | fn free(#[id] arg1: u8) {
   |         ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:23:16
   |
LL |     let lam = |#[id] W(x), #[id] y| ();
   |                ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:23:28
   |
LL |     let lam = |#[id] W(x), #[id] y| ();
   |                            ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:29:18
   |
LL |     fn inherent1(#[id] self, #[id] arg1: u8) {}
   |                  ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:29:30
   |
LL |     fn inherent1(#[id] self, #[id] arg1: u8) {}
   |                              ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:32:18
   |
LL |     fn inherent2(#[id] &self, #[id] arg1: u8) {}
   |                  ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:32:31
   |
LL |     fn inherent2(#[id] &self, #[id] arg1: u8) {}
   |                               ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:35:22
   |
LL |     fn inherent3<'a>(#[id] &'a mut self, #[id] arg1: u8) {}
   |                      ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:35:42
   |
LL |     fn inherent3<'a>(#[id] &'a mut self, #[id] arg1: u8) {}
   |                                          ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:38:22
   |
LL |     fn inherent4<'a>(#[id] self: Box<Self>, #[id] arg1: u8) {}
   |                      ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:38:45
   |
LL |     fn inherent4<'a>(#[id] self: Box<Self>, #[id] arg1: u8) {}
   |                                             ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:44:15
   |
LL |     fn trait1(#[id] self, #[id] arg1: u8);
   |               ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:44:27
   |
LL |     fn trait1(#[id] self, #[id] arg1: u8);
   |                           ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:47:15
   |
LL |     fn trait2(#[id] &self, #[id] arg1: u8);
   |               ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:47:28
   |
LL |     fn trait2(#[id] &self, #[id] arg1: u8);
   |                            ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:50:19
   |
LL |     fn trait3<'a>(#[id] &'a mut self, #[id] arg1: u8);
   |                   ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:50:39
   |
LL |     fn trait3<'a>(#[id] &'a mut self, #[id] arg1: u8);
   |                                       ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:53:19
   |
LL |     fn trait4<'a>(#[id] self: Box<Self>, #[id] arg1: u8, #[id] Vec<u8>);
   |                   ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:53:42
   |
LL |     fn trait4<'a>(#[id] self: Box<Self>, #[id] arg1: u8, #[id] Vec<u8>);
   |                                          ^^^^^

error: expected an inert attribute, found an attribute macro
  --> $DIR/proc-macro-cannot-be-used.rs:53:58
   |
LL |     fn trait4<'a>(#[id] self: Box<Self>, #[id] arg1: u8, #[id] Vec<u8>);
   |                                                          ^^^^^

error: aborting due to 25 previous errors

